fix sample__notes overflow

--- a/client/src/styles/global-styles.scss
+++ b/client/src/styles/global-styles.scss
@@ -848,6 +848,9 @@ $step-width: 40px;
 }
 .Sample__notes {
   width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .Step {
